# omok-bamm

./: .gitignore  Cargo.toml  readme.md
src/: board_test.rs  bot.rs  core.rs  main.rs  ui.rs
src/bot/: eval.rs  hash.rs  mod.rs  model.rs  prune.rs  tt.rs
src/core/: board.rs  rule.rs
src/test/: mod.rs
